--- a/booklyapp/pubspec.yaml
+++ b/booklyapp/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.5
   font_awesome_flutter: ^10.4.0
   cached_network_image: ^3.2.3
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
