--- a/booklyapp/pubspec.yaml
+++ b/booklyapp/pubspec.yaml
@@ -35,10 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  get: ^4.6.5
   font_awesome_flutter: ^10.4.0
   cached_network_image: ^3.2.3
   google_fonts: ^6.1.0
+  go_router: ^13.2.0
 
 dev_dependencies:
   flutter_test:
